[package]
name = "mecomp-mpris"
description = "An MPRIS2 interface for the mecomp music player."
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
license.workspace = true

[package.metadata.wix]
upgrade-guid = "7873C80B-76FE-4D7E-952E-63E9CF71C871"
path-guid = "283BF54C-2683-4B55-805B-EAB030F33459"
license = false
eula = false

[[bin]]
name = "mecomp-mpris"
test = false
bench = false
doctest = false

[lib]
bench = false

[dependencies]
anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
log.workspace = true
mecomp-core = { workspace = true }
mecomp-storage = { workspace = true }
mpris-server.workspace = true
percent-encoding.workspace = true
shellexpand.workspace = true
tokio.workspace = true
mecomp-workspace-hack = { version = "0.1", path = "../mecomp-workspace-hack" }
mecomp-prost.workspace = true
zbus.workspace = true
futures.workspace = true

[dev-dependencies]
one-or-many = { workspace = true }
pretty_assertions.workspace = true
tempfile.workspace = true
mecomp-storage = { workspace = true, features = ["serde", "db", "test_utils"] }
mecomp-core = { workspace = true, features = ["mock_playback", "test_utils"] }
mecomp-daemon = { workspace = true }
rstest.workspace = true
surrealdb.workspace = true
