[package]
name = "one-or-many"
version = "0.3.1"
edition.workspace = true
authors.workspace = true
description = "Utility container for working with data that can either be null, a single value, or a list of values."
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
license.workspace = true

[lib]
bench = false

[features]
default = ["serde"]
serde = ["dep:serde"]
surrealdb = ["serde", "dep:surrealdb"]

[dependencies]
serde = { workspace = true, optional = true }
surrealdb = { workspace = true, optional = true }
mecomp-workspace-hack = { version = "0.1", path = "../mecomp-workspace-hack" }

[dev-dependencies]
rstest = { workspace = true }
pretty_assertions = { workspace = true }
serde_json = "1.0"
surrealqlx = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
