[package]
name = "mecomp-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "This library is responsible for storing and retrieving data about a user's music library to and from an embedded surrealdb database."
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# shared dependencies
lofty = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
surrealdb = { workspace = true }
surrealqlx = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
tempfile = { workspace = true }


# other dependencies
mecomp-workspace-hack = { version = "0.1", path = "../mecomp-workspace-hack" }
one-or-many = { workspace = true, features = ["serde", "surrealdb"] }

[dev-dependencies]
anyhow = { workspace = true }
pretty_assertions = { workspace = true }
surrealdb = { workspace = true }
rstest = { workspace = true }
lazy_static = { workspace = true }
