[package]
name = "mecomp-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "This library is responsible for storing and retrieving data about a user's music library to and from an embedded surrealdb database."
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
db = [
    "serde",
    "one-or-many/surrealdb",
    "dep:surrealdb",
    "dep:surrealqlx",
    "dep:tempfile",
]
serde = ["one-or-many/serde", "dep:serde"]
test_utils = ["dep:tempfile", "dep:anyhow", "db"]

[dependencies]
# shared dependencies
lofty = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, optional = true }
surrealdb = { workspace = true, optional = true }
surrealqlx = { workspace = true, optional = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
tempfile = { workspace = true, optional = true }


# other dependencies
mecomp-workspace-hack = { version = "0.1", path = "../mecomp-workspace-hack" }
one-or-many = { workspace = true }

# dependencies for the test_utils feature
anyhow = { workspace = true, optional = true }

[dev-dependencies]
anyhow = { workspace = true }
pretty_assertions = { workspace = true }
serde_json = { version = "1.0" }
tempfile = { workspace = true }
rstest = { workspace = true }
