[package]
name = "mecomp-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Types/schemas for the mecomp project's internal representations of a music library"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
license.workspace = true

[features]
default = ["surrealdb"]
serde = ["dep:serde", "one-or-many/serde"]
surrealdb = ["serde", "dep:surrealdb", "dep:surrealqlx"]

[dependencies]
one-or-many = { workspace = true }
serde = { workspace = true, optional = true }
surrealdb = { workspace = true, optional = true }
surrealqlx = { workspace = true, optional = true }
