[package]
name = "surrealqlx"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Some traits and macros to make it easier to work with surrealdb"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../README.md"
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
test = false
bench = false
doctest = false

[features]
macros = ["surrealqlx-macros"]

[dependencies]
surrealdb.workspace = true
surrealqlx-macros = { path = "../macros", optional = true, version = "0.1" }
mecomp-workspace-hack = { version = "0.1", path = "../../mecomp-workspace-hack" }
# tracing.workspace = true
