[package]
name = "surrealqlx"
version = "0.2.1"
edition.workspace = true
authors.workspace = true
description = "Some traits and macros to make it easier to work with surrealdb"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../README.md"
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false
doctest = false

[features]
default = ["macros"]
macros = ["surrealqlx-macros"]

[dependencies]
surrealdb.workspace = true
surrealqlx-macros = { workspace = true, optional = true }
sha256 = { version = "1.6.0", default-features = false }
thiserror.workspace = true
tracing.workspace = true
mecomp-workspace-hack = { version = "0.1", path = "../../mecomp-workspace-hack" }

[dev-dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
