[package]
name = "surrealqlx-macros-impl"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
description = "SurrealQLX macros implementation"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../README.md"
license.workspace = true

[lib]
bench = false

[dependencies]
proc-macro2 = { version = "1.0.101", default-features = false }
quote = { version = "1.0.42", default-features = false }
syn = { version = "2.0.111", features = ["parsing", "derive", "full"] }
mecomp-workspace-hack = { version = "0.1", path = "../../mecomp-workspace-hack" }

[dev-dependencies]
pretty_assertions.workspace = true
prettyplease = "0.2.29"
rstest.workspace = true
