[package]
name = "surrealqlx-macros-impl"
version = "0.2.1"
edition.workspace = true
authors.workspace = true
description = "SurrealQLX macros implementation"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../README.md"
license.workspace = true

[lib]
bench = false

[dependencies]
proc-macro2 = "1.0.101"
quote = "1.0.42"
surrealdb.workspace = true
syn = { version = "2.0.111", features = ["parsing", "derive", "full"] }
mecomp-workspace-hack = { version = "0.1", path = "../../mecomp-workspace-hack" }

[dev-dependencies]
pretty_assertions.workspace = true
prettyplease = "0.2.29"
rstest.workspace = true
