[package]
name = "surrealqlx-macros-impl"
version = "0.2.2"
edition.workspace = true
authors.workspace = true
description = "SurrealQLX macros implementation"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../README.md"
license.workspace = true

[lib]
bench = false

[dependencies]
proc-macro2 = "1.0.105"
quote = "1.0.43"
surrealdb.workspace = true
syn = { version = "2.0.114", features = ["parsing", "derive", "full"] }
mecomp-workspace-hack = { version = "0.1", path = "../../mecomp-workspace-hack" }

[dev-dependencies]
pretty_assertions.workspace = true
prettyplease = "0.2.37"
rstest.workspace = true
