[package]
name = "surrealqlx-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Macros for surrealqlx"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true
doctest = false

[dependencies]
syn = { version = "2.0", default-features = false }
mecomp-workspace-hack = { version = "0.1", path = "../../mecomp-workspace-hack" }
surrealqlx-macros-impl = { path = "../macros-impl" }
