[package]
name = "surrealqlx-macros"
version = "0.1.7"
edition.workspace = true
authors.workspace = true
description = "Macros for surrealqlx"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../README.md"
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true
doctest = false
test = false
bench = false

[dependencies]
syn = { version = "2.0.111", default-features = false }
surrealqlx-macros-impl.workspace = true
mecomp-workspace-hack = { version = "0.1", path = "../../mecomp-workspace-hack" }
